--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "@t7/image",
   "version": "0.0.0",
   "main": "dist/index.js",
-  "description": "This is a React image component, that loads once an image is in the viewport.",
+  "description": "This is a React component that loads an image source, only after it is partially or fully visible in the viewport.",
   "author": "TandemSeven <github@tandemseven.com>",
   "license": "MIT",
   "repository": "https://github.com/t7-components/image",
   "keywords": [
     "image",
+    "intersection",
+    "observer",
     "t7",
-    "tandemseven"
+    "tandemseven",
+    "viewport"
   ],
   "jest": {
     "collectCoverageFrom": [
